# hkquant

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_SPEC.md  PROJECT_SPEC_UI.md  PROJECT_SPEC_v1.2.2_INCREMENT.md  PROJECT_SPEC_v1.2.3_INCREMENT.md  README.md  build_perf_cache.py  check_health.py  docker-compose.yml  nacs_checklist_tool.html  pyproject.toml  requirements.txt  run_v7_backtest.py
.github/workflows/: ci.yml
config/: agents.yaml  alerts.yaml  data_sources.yaml  default_peers.yaml  llm_models.yaml  mapping_rules.yaml  schedulers.yaml  settings.yaml  valuation_weights.yaml
config/regulations/: ch18c_post_20240901.yaml  ch18c_pre_20240901.yaml  ipo_rules_post_20250804.yaml  ipo_rules_pre_20250804.yaml
configs/: nacs_v8.yaml
data/: INDEX.md  _archive_manifest.csv  theme_constituents_cache.json  theme_constituents_probe.json  watchlist.json
data/IFIND板块ID/: Book1.xlsx  Book2.xlsx
data/deals/: TEMPLATE.yaml
data/derived/: ipo_d30_returns.csv  nacs_v7.csv  nacs_yearly_aff.csv
data/dict/: README.md  hk_concept_blocks.json  hk_concept_blocks_index.csv  hs_industry_blocks.json  hs_industry_blocks_index.csv  sw_industry_blocks.json  sw_industry_blocks_index.csv  ths_global_industry_blocks.json  ths_global_industry_blocks_index.csv
data/fixtures/: market_environment_cache.json  nacs_v8_baselines.json
data/knowledge_base/: ifind_indicator_catalog.csv  market_env_cache.json
data/raw/: overrides.yaml
docs/: AGENT_DESIGN.md  API_REFERENCE.md  ARCHITECTURE.md  AUTH_INTEGRATION.md  BACKTEST_PROTOCOL.md  DATA_SCHEMA.md  DEPLOYMENT.md  LEARNING_PROTOCOL.md  ON_CALL.md  PLAN_post_v1.0.md  PROMPT_ENGINEERING.md  PROSPECTUS_EXTRACTION.md  RBAC.md  REGULATORY_TIMELINE.md  RUNBOOK.md  SSE_PROTOCOL.md  UI_INTEGRATION.md  VALUATION_MODELS.md  WS_PROTOCOL.md  data_dictionary.md  dev.md  roadmap_thesis_themes.md
docs/case_studies/: 2228_quantumpharm.md  2432_dobot.md  2533_black_sesame.md  3750_catl_h.md  9660_horizon_robotics.md  README.md
docs/decisions/: 0001-use-langgraph.md  0002-claude-as-primary-llm.md  0003-qdrant-over-chroma.md  0004-llamaparse-for-pdf.md  0005-nacs-legacy-asset-migration.md  0006-phased-orm-rollout.md  0007-ipo-postmarket-jsonb-extension.md  0008-dcf-agent-dual-track-integration.md  0009-research-agent-framework-borrowing.md  0010-debate-and-snapshot-design.md  0011-phase7-scope-and-deferrals.md  0012-phase7.5-scope-and-substages.md  0013-phase8-scope-and-substages.md  0014-phase9-scope-and-substages.md  0015-phase10-scope-and-substages.md  0016-phase9-stragglers-cleanup-and-e2e-cli-parametrization.md  0017-llm-provider-kimi-moonshot.md  0018-ifind-incremental-loader-deferral.md  0019-prompt-frontmatter-schema.md  0020-scoring-base-coefficient-hotfix.md  README.md
docs/r6_merge_proposal/: README.md  ipos.py  main.py  snapshots.py
legacy/: README.md  nacs_checklist_tool.html  run_cv_backtest.py
legacy/configs/: nacs_v8.yaml
legacy/scripts/: build_ipo_returns_cache.py  build_market_env_cache.py  check_data_completeness.py  evaluate_new_ipo.py  fetch_hk_market_data.py  fix_p1_cornerstone_aum_country.py  fix_p1_lockup_context_v2.py  generate_sentiment_report.py  migrate_schema_pk_fix.py  nacs_checklist_tool.html  probe_history_quotes.py  probe_theme_constituents.py  run_realtime_env_ablation.py  run_v7_backtest.py  verify_industry_via_ifind.py  verify_theme_compose.py
legacy/src/: config.py  nacs_model.py  schema.py
legacy/tests/: test_cv_backtest.py  test_dao.py  test_etl.py  test_nacs_model.py  test_no_lookahead.py  test_smoke.py
legacy/themes/: README.md  _audit_codes.py  _premium_research_cache.json  ai_revenue_manual.json  history.csv  (+2 more)
notebooks/: 01_data_exploration.ipynb  02_cornerstone_pattern_analysis.ipynb  03_ah_premium_regression.ipynb  04_18c_postlist_performance.ipynb  05_sponsor_track_record.ipynb  06_backtest_calibration.ipynb
reports/: 2026-05-08.md  theme_panel_integration.md
scripts/: analyze_deal.py  analyze_pdf.py  archive_outputs.py  build_ipo_returns_cache.py  build_market_env_cache_partial.py  calibrate_weights.py  case_review.py  dev.py  etl_pipeline.py  explore_peer_ic_robustness.py  explore_peer_industry_concept_ic.py  export_market_env_cache.py  export_memo.py  fetch_hk_concepts.py  fetch_hk_industries.py  fetch_hk_market_data.py  fix_p0_pricing_date.py  fix_p1_data_quality.py  fix_p1_dedupe_stock_code.py  fix_p1_lockup_context.py  fix_p1_peer_drawdown_v2.py  fix_p1_returns_via_ifind.py  fix_p1_share_capital_via_ifind.py  fix_p21_a_share_adv_via_ifind.py  fix_p21_a_share_borrowable_via_ifind.py  fix_p3_listing_chapter.py  ingest_prospectus.py  load_deal.py  migrate_data_quality_v1.py  migrate_features_v2.py  migrate_features_v3.py  migrate_features_v4.py  migrate_features_v5.py  migrate_sqlite_to_pg.py  perf_smoke.py  probe_announcements_news.py  probe_history_quotes.py  probe_theme_constituents.py  review_proposals.py  run_analysis.py  (+9 more)
src/: config.py  log.py  nacs_model.py  nacs_rationale.py
tests/: _pg_helpers.py  conftest.py  test_analyze_deal.py  test_announcement_fetcher.py  test_case_review.py  test_config.py  test_data_quality.py  test_deal_loader.py  test_etl.py  test_etl_pipeline.py  test_html_renderer.py  test_http_client.py  test_l1_theme_heat_modifier.py  test_logging.py  test_market_env_fetcher.py  test_migration_v1.py  test_nacs_rationale.py  test_news_fetcher.py  test_overrides.py  test_p02_ai_gilding.py  test_p11_mkt_cap_modifier.py  test_p12_profitability_tier.py  test_p13_biotech_subdomain.py  test_p21_ah_hedge_tier.py  test_p22_panel_by_theme.py  test_p23_regime_per_theme.py  test_p31_small_cap_cs_rescue.py  test_p32_18c_valuation.py  test_p32a_panel_ps.py  test_p32b_derive_tech18c.py  test_panel_snapshot.py  test_parallel.py  test_predictions.py  test_resolve.py  test_status_pipeline.py  test_themes_classifier.py  test_themes_data.py  test_thesis.py
themes/: README.md  _premium_research_cache.json  research_premium_coefficient.py  theme_tracker.py
workflows/: backtest.yaml  full_analysis.yaml  monitoring.yaml
(+484 files in other folders)
