[project]
name = "hk-ipo-cornerstone-agent"
version = "0.0.1"
description = "HK IPO Cornerstone Investment Agent — multi-agent LLM decision system per PROJECT_SPEC.md v1.2.1"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "HK IPO Agent Team" }]

# Core dependencies declared per PROJECT_SPEC.md §1.
# Heavy / optional dependencies are in [project.optional-dependencies].
dependencies = [
    # LLM orchestration & client
    "langgraph>=0.2",
    "openai>=1.0",

    # Data validation & settings
    "pydantic>=2.7",
    "pydantic-settings>=2.4",

    # Database — both asyncpg (runtime app) and psycopg (sync alembic)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",

    # Vector store + embeddings
    "qdrant-client>=1.11",

    # PDF parsing fallback
    "pymupdf>=1.24",

    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "websockets>=13",

    # Templating
    "jinja2>=3.1",

    # Data processing
    "polars>=1.10",
    "pandas>=2.2",
    "numpy>=1.26",

    # HTTP client
    "httpx>=0.27",

    # Auth (JWT/OIDC) + R6-2 Argon2id password hashing (OWASP-recommended).
    "pyjwt[crypto]>=2.9",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",

    # Cache / queue
    "redis>=5.0",

    # Logging
    "structlog>=24.4",

    # CLI
    "typer>=0.12",

    # YAML
    "pyyaml>=6.0",

    # Time / dates
    "python-dateutil>=2.9",

    # Misc
    "tenacity>=9.0",
    "rich>=13.9",
]

[project.optional-dependencies]
# LlamaParse (paid PDF parser, primary path per §1).
parse = [
    "llama-parse>=0.5",
]
# Local embedding stack (BGE-large-zh-v1.5).
embeddings-local = [
    "sentence-transformers>=3.0",
    "torch>=2.4",
]
# Production embedding fallback (Voyage AI).
embeddings-cloud = [
    "voyageai>=0.3",
]
# Production reporting exporters.
reports = [
    "weasyprint>=62",
    "python-docx>=1.1",
    "matplotlib>=3.9",
    "plotly>=5.24",
]
# Production scheduler (Airflow). Dev uses APScheduler.
scheduler-prod = [
    "apache-airflow>=2.10",
]
scheduler-dev = [
    "apscheduler>=3.10",
]

# Dev tooling lives in [dependency-groups] (PEP 735) below, not in
# optional-dependencies, so uv's tool.uv.default-groups can reference it.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
    "ipykernel>=6.29",
    "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hk_ipo_agent"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
[tool.uv]
package = true
default-groups = ["dev"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: slow tests (default on; skip with -m 'not slow')",
    "integration: integration tests (require docker-compose deps)",
    "e2e: end-to-end tests (require all external services + golden data)",
    "pg_required: R9-7 — tests that need a live PostgreSQL connection (filtered via `-m 'not pg_required'` for unit-job runs without PG)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# ruff — strict mode, applies only to the new src/hk_ipo_agent/ + scripts + tests
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
extend-exclude = [
    # R10-10: NACS legacy code is now fully archived under legacy/ so the
    # per-path entries that lived here (src/nacs_model.py / src/config.py /
    # src/data / src/data_sources / src/reports / 8 stale tests/test_*.py /
    # 11 scripts/* one-off patterns) are covered by the catchall "legacy"
    # below + the directories no longer exist at their original paths.
    # ----- Legacy holding pen + namespaced legacy configs -----
    "legacy",
    "themes",
    "configs",            # legacy NACS configs (new project uses config/ singular)
    # ----- Auto-generated / vendored -----
    "outputs",
    "reports",
    "data/raw",
    "data/processed",
    "data/derived",
    "daily",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    # ----- Spec docs (kept at repo root for historical reference) -----
    "PROJECT_SPEC.md",
    "PROJECT_SPEC_UI.md",
    "new_project_spec",
]

[tool.ruff.lint]
# Start with a sensible default; expand via ADR.
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RET", "PL", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "PLR0913",  # too many args; acceptable for orchestrator nodes
    "PLR2004",  # magic values are OK in business config
    "B008",   # function defaults (Depends, Field)
    "RUF001",  # ambiguous unicode in identifiers (Chinese / financial)
    "RUF002",  # ambiguous unicode in docstrings (× / ≥ used for multipliers / thresholds)
    "RUF003",  # ambiguous unicode in comments
    # PLC0415: lazy imports are used by-design across the codebase to break
    # circular deps (e.g. adjustment_applier ↔ data.models), to soft-handle
    # optional dependencies (weasyprint / llamaparse / airflow), and inside
    # Airflow DAG entry-points. Reintroduce per-file if a specific module
    # genuinely should be eager.
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
# tests/* 允许延迟 import（PLC0415），用于打破循环依赖或惰性加载重型 fixture
"tests/*" = ["E402", "PLR2004", "PLC0415"]
"scripts/*" = ["T201"]
"src/hk_ipo_agent/data/migrations/*" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict on new package only
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src/hk_ipo_agent"]
exclude = [
    "src/hk_ipo_agent/data/migrations/",
    "tests/",
    "scripts/",
    "outputs/",
    "data/",
]

[[tool.mypy.overrides]]
# R10-10: ``langchain.*`` removed — the project uses LangGraph (ADR 0001),
# not LangChain Agents (ADR 0001 §Decision explicitly bans them per the
# "no LangChain Agents" hard constraint).
module = ["langgraph.*", "qdrant_client.*", "llama_parse.*", "ifindpy.*", "openai.*"]
ignore_missing_imports = true
